--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:cardview-v7:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.0'
-    compile 'com.android.support:support-v4:23.0.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -47,6 +46,7 @@ dependencies {
         transitive = true
     }
     compile files('libs/org.apache.http.legacy.jar')
+    compile files('libs/Bmob_Push_V0.6beta_20150408.jar')
 }
 
 repositories {
