--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "24.0.1"
-
     defaultConfig {
         applicationId "me.lancer.airfree"
         minSdkVersion 21
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -17,39 +16,44 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    sourceSets{
-        main{
-            jniLibs.srcDirs=["libs"]
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ["libs"]
         }
+    }
+    productFlavors {
     }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:23.3.0'
-    compile 'com.android.support:support-v4:23.0.0'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:cardview-v7:23.0.0'
-    compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile project(':libzxing')
+    compile files('libs/Msc.jar')
+    compile files('libs/gson-2.3.1.jar')
+    compile files('libs/Sunflower.jar')
+    compile files('libs/org.apache.http.legacy.jar')
+    compile files('libs/Bmob_Push_V0.6beta_20150408.jar')
+    compile('com.github.afollestad.material-dialogs:commons:0.8.5.8@aar') {
+        transitive = true
+    }
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.lguipeng.bubbleview:library:1.0.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'tyrantgit:explosionfield:1.0.1'
-    compile project(':libzxing')
-    compile files('libs/gson-2.3.1.jar')
-    compile files('libs/Sunflower.jar')
-    compile('com.github.afollestad.material-dialogs:commons:0.8.5.8@aar') {
-        transitive = true
-    }
-    compile files('libs/org.apache.http.legacy.jar')
-    compile files('libs/Bmob_Push_V0.6beta_20150408.jar')
+    compile 'com.google.android.gms:play-services-auth:9.4.0'
 }
 
 repositories {
     maven { url "https://jitpack.io" }
 }
+
+
 
