--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
 
     <application
         android:name="me.lancer.airfree.util.ApplicationUtil"
@@ -21,6 +23,24 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <receiver
+            android:name="me.lancer.airfree.sms.SmsReceiver"
+            android:exported="true"
+            android:permission="android.permission.BROADCAST_SMS">
+            <intent-filter android:priority="2147483647">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+                <action android:name="android.provider.Telephony.SMS_DELIVER" />
+                <action android:name="android.intent.action.PHONE_STATE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+        <service android:name="me.lancer.airfree.sms.SmsService">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </service>
+
         <activity
             android:name="me.lancer.airfree.activity.MainActivity"
             android:label="@string/app_name"
@@ -120,8 +140,8 @@
             android:label="@string/title_activity_session" />
         <activity
             android:name="me.lancer.airfree.activity.DesktopActivity"
-            android:screenOrientation="landscape"
-            android:label="@string/title_activity_desktop"></activity>
+            android:label="@string/title_activity_desktop"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
